--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
-csil:
-  name: CSIL Bathroom
-  email: smells@sfu.ca
-  password_digest: <%= User.digest('dallan') %>
-  role: male
-  
-dallan:
-  name: Dallan Bhatti
-  email: dbhatti@sfu.ca
-  password_digest: <%= User.digest('dallan') %>
-  role: admin
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+#  column: value
